07/22/17
- Added /pyhelp command: Allows the user to use the bot to search in Python's documentations

07/21/17
- Added /noinstance command: Return everyone's nickname back to normal in the server

07/20/17
- Added /instanceof command: Add "instanceof" to everyone's nickname in the server
- Added /choice command: allows user to let the bot pick out of a set of choices that the user provides

07/19/17
- Added a changelog

07/18/17
- Added /hug and /kill commands; two silly commands for the user to play with
- Updated Readme about what's required to install

07/17/17
- Added a /echo command that lets the bot echo what the user said
- Converted the project from JavaScript to Python

06/01/17
- Updated some information about the project in Readme.md

05/31/17
- The bot can now log and send text messages in Discord