@@ -1,0 +1,4 @@
+PREFIX = "/"
+BOT_OWNER_ID = "Bot Owner's ID here"
+BOT_ID = "Bot's ID here"
+BOT_TOKEN = "Bot's Token here"
